sumo/tests/jtrrouter/errors/default_departpos_false/options.jtrrouter
--net-file=input_net.net.xml --flows=input_flows.flows.xml -o routes.rou.xml --departpos xxx
